# discordtrader

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
agents/: __init__.py
agents/discord_listener/: __init__.py  agent.py  deduper.py  filter.py  parser.py
agents/ibkr_executor/: __init__.py  agent.py  connection.py  contract_resolver.py  order_builder.py  order_tracker.py  smart_options_selector.py
agents/interpreter/: __init__.py  agent.py  confidence.py  llm_confidence.py  llm_parser.py  templates.py  validator.py
agents/review/: __init__.py  dispatcher.py
agents/risk_officer/: __init__.py  agent.py  circuit_breaker.py  portfolio_adapter.py  rules.py
audit/: __init__.py  hasher.py  heartbeat.py  ledger_writer.py  logger.py
bus/: __init__.py  queue.py
cli/: __init__.py  run_executor.py  run_interpreter.py  run_listener.py  run_paper.py  run_review.py  run_risk.py
config/: settings.py
config/profiles/: discord_equities.toml  paper.toml
docs/: OPENCLAW_WIRING.md
schemas/: __init__.py  execution_receipt.py  portfolio_snapshot.py  risk_decision.py  signal_event.py  trade_intent.py
scripts/: setup_openclaw_wiring.sh
tests/: conftest.py
tests/integration/: test_e2e_paper.py  test_ibkr_mock.py
tests/unit/: test_deduper.py  test_filter.py  test_hasher.py  test_heartbeat.py  test_ledger_writer.py  test_llm_confidence.py  test_llm_parser.py  test_order_builder.py  test_order_tracker.py  test_parser.py  test_portfolio_adapter.py  test_review_dispatcher.py  test_risk_rules.py  test_schemas.py  test_settings_validation.py  test_smart_options_selector.py  test_templates.py  test_validator_confidence.py
